// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Logo component 1`] = `
<div
  className="logo"
>
  <a
    className="logo__link undefined"
    href="/"
    onClick={[Function]}
  >
    <span
      className="logo__letter logo__letter--1"
    >
      W
    </span>
    <span
      className="logo__letter logo__letter--2"
    >
      T
    </span>
    <span
      className="logo__letter logo__letter--3"
    >
      W
    </span>
  </a>
</div>
`;

exports[`render Logo component with class "logo__link--light" 1`] = `
<div
  className="logo"
>
  <a
    className="logo__link logo__link--light"
    href="/"
    onClick={[Function]}
  >
    <span
      className="logo__letter logo__letter--1"
    >
      W
    </span>
    <span
      className="logo__letter logo__letter--2"
    >
      T
    </span>
    <span
      className="logo__letter logo__letter--3"
    >
      W
    </span>
  </a>
</div>
`;
